<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>367</width>
    <height>436</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0" colspan="4">
    <widget class="QLineEdit" name="lineEdit">
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>40</height>
      </size>
     </property>
     <property name="font">
      <font>
       <family>Arial</family>
       <pointsize>20</pointsize>
      </font>
     </property>
     <property name="text">
      <string>0.0</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
     <property name="readOnly">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="CalculateBtn" name="ac_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>AC</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>lightgray</string>
     </property>
     <property name="role" stdset="0">
      <string>clear</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="CalculateBtn" name="plus_minus_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>+/-</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>lightgray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="1" column="2">
    <widget class="CalculateBtn" name="percent_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>%</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>lightgray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="1" column="3">
    <widget class="CalculateBtn" name="division_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>/</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>orange</string>
     </property>
     <property name="role" stdset="0">
      <string>operator</string>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="CalculateBtn" name="n7_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>7</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>gray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="2" column="1">
    <widget class="CalculateBtn" name="n8_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>8</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>gray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="2" column="2">
    <widget class="CalculateBtn" name="n9_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>9</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>gray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="2" column="3">
    <widget class="CalculateBtn" name="multiplication_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>*</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>orange</string>
     </property>
     <property name="role" stdset="0">
      <string>operator</string>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="CalculateBtn" name="n4_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>4</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>gray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="3" column="1">
    <widget class="CalculateBtn" name="n5_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>5</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>gray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="3" column="2">
    <widget class="CalculateBtn" name="n6_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>6</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>gray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="3" column="3">
    <widget class="CalculateBtn" name="sub_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>-</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>orange</string>
     </property>
     <property name="role" stdset="0">
      <string>operator</string>
     </property>
    </widget>
   </item>
   <item row="4" column="0">
    <widget class="CalculateBtn" name="n1_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>1</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>gray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="4" column="1">
    <widget class="CalculateBtn" name="n2_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>2</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>gray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="4" column="2">
    <widget class="CalculateBtn" name="n3_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>3</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>gray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="4" column="3">
    <widget class="CalculateBtn" name="add_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>+</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>orange</string>
     </property>
     <property name="role" stdset="0">
      <string>operator</string>
     </property>
    </widget>
   </item>
   <item row="5" column="0" colspan="2">
    <widget class="CalculateBtn" name="zero_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>0</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>gray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="5" column="2">
    <widget class="CalculateBtn" name="point_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>.</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>gray</string>
     </property>
     <property name="role" stdset="0">
      <string>num</string>
     </property>
    </widget>
   </item>
   <item row="5" column="3">
    <widget class="CalculateBtn" name="equal_btn">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>=</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="autoExclusive">
      <bool>true</bool>
     </property>
     <property name="bg" stdset="0">
      <string>equal</string>
     </property>
     <property name="role" stdset="0">
      <string>calculate</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>CalculateBtn</class>
   <extends>QPushButton</extends>
   <header>calculate_btn_class</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
